syntax = "proto3";

option optimize_for = SPEED;
option java_package = "com.dfire.protocol";
option java_outer_classname = "RpcExecuteMessage";

message ExecuteMessage {

    string actionId = 1;
    sint32 exitCode = 2;
}