syntax = "proto3";

option optimize_for = SPEED;
option java_package = "com.dfire.protocol";
option java_outer_classname = "RpcManualMessage";

message ManualMessage {
    string historyId = 1;
    sint32 exitCode = 2;
}